--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.1.0
-flask-cors==3.0.10
-Jinja2==3.0.1
-Werkzeug==2.0.1
-python-dotenv==0.19.1
-pymongo[srv]==3.12.0
-bcrypt==3.2.0
-PyJWT==2.1.0
-requests==2.25.1
+Flask
+flask-cors
+Jinja2
+Werkzeug
+python-dotenv
+pymongo[srv]
+bcrypt
+PyJWT
+requests
 
 flask_pymongo
